kubernetes-vault/ingress-vault-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: vault
spec:
  rules:
  - host: "vault.shamrockoo4tune.ru"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vault-ui
              port:
                number: 8200
...
